ci: :wrench: add tailwind configuration and style guide

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+// Supports weights 100-900
+import '@fontsource-variable/inter';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,7 +12,7 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
+	<body class="font-epilogue">
 		<slot />
 	</body>
 </html>
@@ -20,3 +25,4 @@
 		height: 100%;
 	}
 </style>
+
