feat: :sparkles: implement project detail

--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -2,11 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 
 const metadata = {
-  title: "Home",
-  description: "Selamat datang di halaman utama.",
+  title: "About Us",
+  description: "Selamat datang di halaman tentang kami.",
 };
 ---
 <Layout title={metadata.title} description={metadata.description}>
-  <h1>Welcome to the Home Page</h1>
+  <h1>Welcome to the About Us Page</h1>
   <p>Ini adalah halaman utama website Anda.</p>
 </Layout>
