--- a/src/pages/style-guide.astro
+++ b/src/pages/style-guide.astro
@@ -10,7 +10,7 @@ import Layout from "../layouts/Layout.astro";
       <div><span class="text-green-500">H1</span></div>
       <div class="col-span-2 lg:col-span-3">
         <span
-          class="text-4xl tracking-tighter font-display text-green-800 lg:text-6xl"
+          class="text-4xl tracking-tighter font-epilogue text-green-800 lg:text-6xl"
           >Header 1</span
         >
       </div>
@@ -19,7 +19,7 @@ import Layout from "../layouts/Layout.astro";
       <span class="text-green-500">H2</span>
       <div class="col-span-2 lg:col-span-3">
         <span
-          class="text-2xl tracking-tighter font-display text-green-800 lg:text-5xl"
+          class="text-2xl tracking-tighter font-epilogue text-green-800 lg:text-5xl"
           >Header 2</span
         >
       </div>
@@ -28,7 +28,7 @@ import Layout from "../layouts/Layout.astro";
       <span class="text-green-500">H3</span>
       <div class="col-span-2 lg:col-span-3">
         <span
-          class="text-xl tracking-tighter font-display text-green-800 lg:text-4xl"
+          class="text-xl tracking-tighter font-epilogue text-green-800 lg:text-4xl"
           >Header 3</span
         >
       </div>
@@ -37,7 +37,7 @@ import Layout from "../layouts/Layout.astro";
       <span class="text-green-500">H4</span>
       <div class="col-span-2 lg:col-span-3">
         <span
-          class="text-xl tracking-tighter font-display text-green-800 lg:text-3xl"
+          class="text-xl tracking-tighter font-epilogue text-green-800 lg:text-3xl"
           >Header 4</span
         >
       </div>
@@ -46,7 +46,7 @@ import Layout from "../layouts/Layout.astro";
       <span class="text-green-500">H5</span>
       <div class="col-span-2 lg:col-span-3">
         <span
-          class="text-lg tracking-tighter font-display text-green-800 lg:text-2xl"
+          class="text-lg tracking-tighter font-epilogue text-green-800 lg:text-2xl"
           >Header 5</span
         >
       </div>
@@ -55,7 +55,7 @@ import Layout from "../layouts/Layout.astro";
       <span class="text-green-500">H6</span>
       <div class="col-span-2 lg:col-span-3">
         <span
-          class="text-base tracking-tighter font-display text-green-800 lg:text-xl"
+          class="text-base tracking-tighter font-epilogue text-green-800 lg:text-xl"
           >Header 6</span
         >
       </div>
@@ -65,7 +65,7 @@ import Layout from "../layouts/Layout.astro";
       <div class="col-span-2 lg:col-span-3">
         <a
           href="#_"
-          class="text-green-500 text-xl font-display hover:text-pink-500 duration-200"
+          class="text-green-500 text-xl font-epilogue hover:text-pink-500 duration-200"
           >Link text</a
         >
       </div>
@@ -73,7 +73,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="grid grid-cols-3 items-start lg:grid-cols-4">
       <span class="text-green-500">Subtitle</span>
       <div class="col-span-2 lg:col-span-3">
-        <span class="text-base tracking-tighter font-display text-green-800"
+        <span class="text-base tracking-tighter font-epilogue text-green-800"
           >Subtitle text</span
         >
       </div>
@@ -90,7 +90,7 @@ import Layout from "../layouts/Layout.astro";
     <div class="grid grid-cols-3 items-start lg:grid-cols-4">
       <span class="text-green-500">Caption</span>
       <div class="col-span-2 lg:col-span-3">
-        <span class="text-green-500 text-xs">Picture about somethign</span>
+        <span class="text-green-500 text-xs">Picture about something</span>
       </div>
     </div>
     <div class="grid grid-cols-3 items-start lg:grid-cols-4">
@@ -106,3 +106,4 @@ import Layout from "../layouts/Layout.astro";
     </div>
   </div>
 </Layout>
+
