--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 
 const metadata = {
-  title: "About Us",
+  title: "About Me",
   description: "Selamat datang di halaman tentang kami.",
 };
 ---
