--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,7 @@
 ---
-import Footer from "../components/Footer.astro";
-import CallAction from "../components/CallAction.astro";
-import Header from "../components/Header.astro";
+import Footer from "../components/ui/Footer.astro";
+import CallAction from "../components/ui/CallAction.astro";
+import Header from "../components/ui/Header.astro";
 
 const { title, description } = Astro.props;
 ---
