--- a/src/components/ui/CallAction.astro
+++ b/src/components/ui/CallAction.astro
@@ -1,3 +1,7 @@
+---
+import { ArrowRight} from "@phosphor-icons/react";
+---
+
 <div class="bg-neutral-20">
     <section class="py-14 lg:px-0 px-6 max-w-7xl mx-auto items-center justify-center">
       <div class="flex flex-col gap-y-10 mt-4">
@@ -34,7 +38,7 @@
                 <p class="custom-body font-semibold text-[22px] ">
                   Let's Talk
                 </p>
-                <i class="ph ph-arrow-right"></i>
+                <ArrowRight size={28} />
               </div>
             </button>
           </a>
