--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Hero from "../components/home/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 
 const metadata = {
@@ -7,6 +8,5 @@ const metadata = {
 };
 ---
 <Layout title={metadata.title} description={metadata.description}>
-  <h1>Welcome to the Home Page</h1>
-  <p>Ini adalah halaman utama website Anda.</p>
+  <Hero />
 </Layout>
