--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,49 @@
 ---
-import Hero from "../components/home/Hero.astro";
 import Layout from "../layouts/Layout.astro";
 
 const metadata = {
-  title: "Home",
-  description: "Selamat datang di halaman utama.",
+  title: "Portfolio | Bagas Miftahun",
+  description: "Personal website and portfolio of Bagas Miftahun, a full stack web developer based in Indonesia."
 };
 ---
+
 <Layout title={metadata.title} description={metadata.description}>
-  <Hero />
+  <div class="flex flex-row">
+    <div class="flex flex-col gap-y-24 p-10">
+      <!-- Kelompok Pertama -->
+      <section class="space-y-[100px] flex-grow">
+        <h1 class="font-poppins text-[150px] font-bold max-w-[700px] leading-none">
+          Bagas-Portfolio.
+        </h1>
+        <button class="text-xl font-semibold border border-dark px-10 py-6 rounded-full hover:bg-dark hover:text-light">
+          by Design18th
+        </button>
+      </section>
+      <!-- Kelompok Kedua -->
+      <section class="flex items-center justify-between space-x-12">
+        <div class="space-y-6">
+          <h3 class="font-semibold text-2xl">About</h3>
+          <p class="font-normal text-xl">
+            Studio Kuji - Digital Design Studio Specialized in Brand Identity
+            Design Portfolio Works 2022-2024
+          </p>
+        </div>
+        <div class="space-y-6">
+          <h3 class="font-semibold text-2xl">Contact</h3>
+          <p class="font-normal text-xl">hello@studiokuji.com +62 123 456 789</p>
+        </div>
+        <div class="space-y-6">
+          <h3 class="font-semibold text-2xl">Information</h3>
+          <p class="font-normal text-xl">
+            www.studiokuji.com behance.net/studiokuji dribbble.com/studiokuji
+          </p>
+        </div>
+      </section>
+    </div>
+    <aside class="w-20 h-screen border-l flex items-center justify-center">
+      <div class="transform -rotate-90 whitespace-nowrap">
+        <a href ="/" class="font-bold text-xl">Portfolio <span class="font-normal text-xl">Bagas</span></a>
+      </div>
+    </aside>
+  </div>
 </Layout>
