--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,6 +16,6 @@ const { title, description } = Astro.props;
     <ClientRouter />
   </head>
   <body class="bg-light font-inter text-dark">
-    <slot class="max-h-screen"/>
+    <slot />
   </body>
 </html>
