feat: :sparkles: add detail content pages

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -16,7 +16,7 @@ const metadata = {
         <div class="flex items-start space-x-12">
           <div class="flex-1">
             <h3
-              class="font-poppins text-6xl font-normal max-w-[700px] leading-none"
+              class="font-poppins text-6xl font-normal max-w-[700px] leading-tight"
             >
               About <br />Me
             </h3>
@@ -39,7 +39,7 @@ const metadata = {
       <section class="grid grid-cols-2 gap-x-12 items-center">
         <img src="/user.png" alt=""/>
         <div class="space-y-6">
-          <a href="/content">
+          <a href="/contents">
             <button
               class="text-xl font-semibold border border-dark px-10 py-6 rounded-full hover:bg-dark hover:text-light"
             >
