--- a/src/pages/contents/index.astro
+++ b/src/pages/contents/index.astro
@@ -1,5 +1,8 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import Layout from "../../layouts/Layout.astro";
+import { getCollection } from "astro:content";
+
+const projects = await getCollection("projects");
 
 const metadata = {
   title: "Content | Bagas Miftahun",
@@ -14,7 +17,7 @@ const metadata = {
       <!-- Kelompok Pertama -->
       <section class="flex-grow">
         <h3
-          class="font-poppins text-6xl font-normal max-w-[700px] leading-none text-start"
+          class="font-poppins text-6xl font-normal max-w-[700px] leading-tight text-start"
         >
           Table of-<br />Contents.
         </h3>
@@ -22,13 +25,18 @@ const metadata = {
       <!-- Kelompok Kedua -->
       <section>
         <div class="flex flex-col gap-y-10">
-          <a
-            href="/"
-            class="font-normal text-[32px] inline-block underline underline-offset-8"
-          >
-            Brand Identity for XYZ Company
-          </a>
-          <a
+          {
+            projects.map((project: any) => (
+              <a
+                href={`/contents/${project.slug}`}
+                class="font-normal text-[32px] inline-block underline underline-offset-8"
+              >
+                {/* Brand Identity for XYZ Company */}
+                {project.data.title}
+              </a>
+            ))
+          }
+          <!-- <a
             href="/"
             class="font-normal text-[32px] inline-block underline underline-offset-8"
           >
@@ -57,12 +65,14 @@ const metadata = {
             class="font-normal text-[32px] inline-block underline underline-offset-8"
           >
             Advertising Campaign for MNO Product
-          </a>
+          </a> -->
         </div>
       </section>
     </div>
-    <aside class="w-20 border-l flex flex-col items-center justify-between py-10">
-      <img src="/favicon.svg" alt="" class="h-10 w-10">
+    <aside
+      class="w-20 border-l flex flex-col items-center justify-between py-10"
+    >
+      <img src="/favicon.svg" alt="" class="h-10 w-10" />
       <div class="transform -rotate-90 whitespace-nowrap">
         <a href="/" class="font-bold text-xl">
           Portfolio <span class="font-normal text-xl">Bagas</span>
