--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -10,7 +10,7 @@ const metadata = {
 
 <Layout title={metadata.title} description={metadata.description}>
   <div class="flex flex-row h-screen">
-    <div class="flex flex-col p-10">
+    <div class="flex flex-col p-10 gap-6">
       <!-- Kelompok Pertama -->
       <section class="flex-grow">
         <div class="flex items-start space-x-12">
@@ -27,25 +27,20 @@ const metadata = {
             >
               Bagas Miftahun.
             </h1>
-            <button
-              class="text-xl font-semibold border border-dark px-10 py-6 rounded-full hover:bg-dark hover:text-light cursor-none"
-            >
-              Web Developer
-            </button>
+            <a href="/contents">
+              <button
+                class="text-xl font-semibold border border-dark px-10 py-6 rounded-full hover:bg-dark hover:text-light"
+              >
+                Welcome to My Portfolio
+              </button>
+            </a>
           </div>
         </div>
       </section>
       <!-- Kelompok Kedua -->
-      <section class="grid grid-cols-2 gap-x-12 items-center">
-        <img src="/user.png" alt=""/>
-        <div class="space-y-6">
-          <a href="/contents">
-            <button
-              class="text-xl font-semibold border border-dark px-10 py-6 rounded-full hover:bg-dark hover:text-light"
-            >
-              Welcome to My Portfolio
-            </button>
-          </a>
+      <section class="flex flex-col md:flex-row items-center max-h-screen overflow-auto gap-4">
+        <img src="/user.png" alt="User Image" class="mx-auto max-h-full"/>
+        <div class="space-y-4 overflow-auto max-h-full">
           <p class="font-normal text-xl">
             I am a passionate brand designer with a keen eye for creating impactful visual identities. With a deep understanding of the power of branding, I strive to craft compelling designs that not only capture attention but also communicate the essence and values of a brand.
           </p>
