fix: :bug: description overflow scroll y

--- a/src/pages/contents/[slug].astro
+++ b/src/pages/contents/[slug].astro
@@ -37,7 +37,7 @@ const metadata = {
             For More Details &nbsp;<ArrowUpRight size={24} />
           </button>
         </div>
-        <div class="flex flex-col gap-y-6 p-10">
+        <div class="flex flex-col gap-y-6 p-10 overflow-y-auto">
           <div class="flex flex-col gap-y-2">
             <p class="font-poppins text-2xl font-semibold">PROBLEM</p>
 
@@ -60,6 +60,18 @@ const metadata = {
               tech-focused nature.
             </p>
           </div>
+          <div class="flex flex-col gap-y-4">
+            <p class="font-poppins text-2xl font-semibold">SOLUTION</p>
+
+            <p class="font-normal text-xl">
+              The design team conducted market research and competitor analysis
+              to understand XYZ Company's target audience and industry
+              landscape. They developed a brand identity package that included a
+              modern and dynamic logo, a vibrant color palette that conveyed
+              energy and innovation, and typography that reflected their
+              tech-focused nature.
+            </p>
+          </div>          
         </div>
       </section>
       <!-- Kelompok Kedua -->
